--- a/tugas11/src/App.css
+++ b/tugas11/src/App.css
@@ -1,3 +1,11 @@
+*{
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+body{
+  font-family: Arial, Helvetica, sans-serif;
+}
 .App {
   text-align: center;
 }
@@ -35,4 +43,34 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+nav ul li a{
+  color: #f4f4f4;
+  text-decoration: none;
+  list-style: none;
+  display: flex;
+  margin: 20px 30px;
+  align-items: center;
+  text-align: center;
+  transition: 0.5s ease;
+}
+nav ul li a:hover{
+  color: #61dafb;
+}
+nav ul{
+  list-style: none;
+  display: flex;
+  margin: 0 auto;
+}
+nav{
+  padding: 0;
+  margin: 0 auto;
+  background: #222222;
+  width: 100%;
+  top: 0;
+  left: 0;
+}
+nav ul li{
+  margin: 0  auto;
 }
